-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
The nodemap code does not properly initialize any unused fields in the on-disk records used for configuring the nodemap properties. This means that if we want to use any of these fields in the future (as was the case for the read-only mount flag in LU-15451, for example), then they may contain random garbage from memory.
This makes it difficult to expand nodemap functionality within the constrained configuration record space that is available for use today, without requiring a significant change to the on-disk configuration records.
We need a patch at the soonest opportunity that starts zeroing these nodemap records so that they could be used productively in the future. The sooner this patch is landed, and the more widespread the deployment of this patch, the sooner we can start using this fields.